apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: NodePort
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30082
